--- a/src/App.css
+++ b/src/App.css
@@ -1,33 +1,35 @@
-.App {
-  text-align: center;
+svg {
+  font: 10px sans-serif;
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
-  pointer-events: none;
+path.line {
+  fill: none;
+  stroke: #666;
+  stroke-width: 1.5px;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+path.area {
+  fill: #e7e7e7;
 }
 
-.App-link {
-  color: #61dafb;
+.axis {
+  shape-rendering: crispEdges;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.x.axis line {
+  stroke: #fff;
+}
+
+.x.axis .minor {
+  stroke-opacity: .5;
+}
+
+.x.axis path {
+  display: none;
+}
+
+.y.axis line,
+.y.axis path {
+  fill: none;
+  stroke: #000;
 }
